--- a/software.html
+++ b/software.html
@@ -39,20 +39,40 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1754713'>Job Application for Embedded Software Engineer - Platforms Software at Lilium</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4367979002'>Job Application for Software Developer (.NET Core) at Callibrity</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4367985002'>Job Application for Software Engineer in Test - Test Automation at Callibrity</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/enova/jobs/1622664'>Job Application for Senior Software Engineer (Brazil) at Enova International</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Brazil Brazil S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/forwardnetworks/eed02019-9787-42f4-a60a-5cf94789d7b1'>Forward Networks - Software Engineer - Compilers and Tools</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
@@ -71,7 +91,7 @@
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/pagerduty/f8d63db8-d916-4c95-9f85-b38e12f6ff03'>PagerDuty - Senior Software Engineer - Pipeline</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pagerduty/f8d63db8-d916-4c95-9f85-b38e12f6ff03'>PagerDuty - Senior Software Engineer - Pipeline</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -103,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://designlinxhardwaresolutionsllc.applytojob.com/apply/oWT9GAJH0N/Xilinx-Embedded-Software-Engineer'>Xilinx Embedded Software Engineer - DesignLinx Hardware Solutions, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://designlinxhardwaresolutionsllc.applytojob.com/apply/oWT9GAJH0N/Xilinx-Embedded-Software-Engineer'>Xilinx Embedded Software Engineer - DesignLinx Hardware Solutions, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -157,7 +177,7 @@
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oY4Cafwy'>iStreamPlanet Careers - Senior Software Engineer - Web Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/istreamplanet/job/oY4Cafwy'>iStreamPlanet Careers - Senior Software Engineer - Web Development</a></h5> 
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -165,7 +185,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
+<h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -189,7 +209,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oERR9fwf&__jvst=Employee+Referral&__jvsd=sEKAqgw9&__jvsc=Twitter&bid=nBlXUKw2'>Jobvite, Inc. Careers - Senior Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oERR9fwf&__jvst=Employee+Referral&__jvsd=sEKAqgw9&__jvsc=Twitter&bid=nBlXUKw2'>Jobvite, Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -209,7 +229,7 @@
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellsky/jobs/1768306'>Job Application for Software Engineer - Biotherapies  at WellSky </a></h5> 
+<h5><a href='https://boards.greenhouse.io/wellsky/jobs/1768306'>Job Application for Software Engineer - Biotherapies  at WellSky </a></h5> 
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -229,7 +249,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/99dfa378-9581-4b87-a271-660aa5bbedd6'>Couchbase - Software Engineer in Test - Mobile</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/99dfa378-9581-4b87-a271-660aa5bbedd6'>Couchbase - Software Engineer in Test - Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -249,11 +269,11 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">Hong Kong Island, Hong Kong</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -281,7 +301,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/canonical/jobs/1783333'>Job Application for Software Engineer - Distributed Storage - Worldwide at Canonical</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/canonical/jobs/1783333'>Job Application for Software Engineer - Distributed Storage - Worldwide at Canonical</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -332,7 +352,7 @@ empowers and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brz.softgarden.io/job/2610384/Senior-Software-Engineer-agiler-Software-Architekt-m-w-d-?jobDbPVId=12134789&amp;l=de'>Senior Software Engineer / agiler Software Architekt (m/w/d)</a></h5> 
+<h5><a href='https://brz.softgarden.io/job/2610384/Senior-Software-Engineer-agiler-Software-Architekt-m-w-d-?jobDbPVId=12134789&amp;l=de'>Senior Software Engineer / agiler Software Architekt (m/w/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -342,7 +362,7 @@ empowers and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/software-engineer-i-25185'>Software Engineer I - ELSEVIER Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/software-engineer-i-25185'>Software Engineer I - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... The Software Engineer I entry-level position performs basic software 
 development assignments within a specific software functional area or product 
@@ -363,7 +383,7 @@ thrives on delivering exceptional quality and functionality to customers....</p>
 <p>4 days ago ... OverviewThe team is a collection of results oriented developers working on tools 
 impacting the entire company. Our main focus is creating frameworks.....</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -376,7 +396,7 @@ impacting the entire company. Our main focus is creating frameworks.....</p>
 <p>Jul 15, 2019 ... Senior Software Developer (Java). Alexandria, Virginia, United States Full-time. 
 loading Fetching your Linkedin profile ... Application Form. Apply with?...</p>
 <hr/>
-<h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skyslope.workable.com/j/0BDD0D7F53'>SkySlope - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -419,7 +439,7 @@ m/f) in Winterthur (published: 19.07.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/9XVPwzxQsj/Software-Engineer-NETMVC'>Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/9XVPwzxQsj/Software-Engineer-NETMVC'>Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -437,27 +457,6 @@ Engineering; Employment Type: Experienced Professionals; Division:?...</p>
 <p>Jul 17, 2019 ... We are looking for an experienced staff software engineer who is passionate 
 about producing quality software and helping develop a young team of engineers
 .</p>
-<hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_capita/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=307118&localeCode=en-us'>Capita - Graduate Software Developer - UK - England - Wiltshire UK ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... Becoming a DevOps Engineer with Capita Education Software Solutions: The 
-SIMS8 development environment is making significant steps forwards in its?...</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/trialspark/jobs/1089222'>Job Application for Software Engineer - New Grad - Product at TrialSpark</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/trialspark/jobs/1790922'>Job Application for Software Engineer - Product at TrialSpark</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-07-25</p>
 <hr/>
 
 
